ingress-private.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: faceapi-private
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/client-body-buffer-size: 100m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "120s"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120s"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120s"
spec:
  ingressClassName: nginx-controller-private
  rules:
    - host: faceapi-prod-private.ht.iq
      http:
        paths:
          - backend:
              service:
                name: faceapi
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
  - hosts: 
    - faceapi-prod-private.ht.iq
    secretName: faceapi-certificate
